--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                              <h2>-Paper:Co-author</h2>
                              <ul>
                                  <li><a link="" href="https://arxiv.org/abs/2109.12121" target="_blank"> “Intracluster light properties in a fossil cluster at z = 0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a></li>
-                                 <li><a link="" href="http://arxiv.org/abs/2205.08161" target="_blank"> "How to quantify the similarity of 2D distributions: Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al,2022, Accepted to ApJs</a></li>
+                                 <li><a link="" href="https://iopscience.iop.org/article/10.3847/1538-4365/ac7142" target="_blank"> "How to quantify the similarity of 2D distributions: Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a></li>
                              </ul>
                          </div>
                          <div>
