--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                          <div>
                              <h2>References</h2>
                              <ul>
-                                 <li><a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko@kasi.re.kr</a></li>
-                                 <li><a>Co-supervisor : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273@gmail.com</a></li>
+                                 <li><a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a></li>
+                                 <li><a>Co-supervisor : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a></li>
                              </ul>
                          </div>
                          <div>
@@ -163,7 +163,7 @@
                              <h2>Languages</h2>
                              <ul>
                                  <li><a>Korean(Native)</a></li>
-                                 <li><a>English(TOFLE: 81 (2021.11))</a></li>
+                                 <li><a>English(Fluent)</a></li>
                                  <li><a>Spanish(Learning)</a></li>
                              </ul>
                          </div>
@@ -178,8 +178,8 @@
                          <div>
                              <h2>E-mail</h2>
                              <ul>
-                                 <li><a>hwkim1011@gmail.com</a></li>
-                                 <li><a>kimyo1@kasi.re.kr</a></li>
+                                 <li><a>hwkim1011[at]gmail.com</a></li>
+                                 <li><a>kimyo1[at]kasi.re.kr</a></li>
                              </ul>
                          </div>
                      </div>
