--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                              <h2>Talks</h2>
                              <h2>-National</h2>
                              <ul>
+				 <li><a>fall 2022) Korea astronomical society meeting, GyungJu/ Oral talk</a></li>
                                  <li><a>spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a></li>
                                  <li><a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/ Oral talk</a></li>
                                  <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
@@ -125,6 +126,7 @@
                              <h2>Grants and Awards</h2>
                              <h2>-Fund</h2>
                              <ul>
+				 <li><a>2022.12.-2023.11. - UST Young scientist+ Fund : fund for research support</a></li>
                                  <li><a>2022 1st semester - UST Overseas program : fund for Oversea training</a></li>
                              </ul>
                          </div>
