--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                  <p>Homepage of Hyowon Kim in astronomy</p>
                  <span class="logo"><img src="images/hyo1.jpg" alt="myphoto"></span>
 				 <h1>KIM HYOWON</h1>
-				 <p>" I like cat, sea turtle, PC Game, Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim), TRPG.<br> Nowadays I'm learning Spanish. "</p>
+				 <p>" I like cat, sea turtle, PC Game, Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim), TRPG.<br> Nowadays I'm learning Spanish and drawing Oil pastel painting. "</p>
              </header>
              
 <!--             nav-->
