--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                          <div>
                              <h2>Education</h2>
                              <ul>
+				 <li><a>2017-now) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.
                                  <li><a>2010-2015) Kyung pook National University,Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a></li>
                              </ul>
                          </div>
