--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                  <ul>
                      <li><a href="#about">ABOUT</a></li>
                      <li><a href="#research">RESEARCH</a></li>
-		      <li><a href="#experiances">EXPERIENCES</a></li>
+		      <li><a href="#experiences">EXPERIENCES</a></li>
                      <li><a href="#contact">CONTACT</a></li>
                  </ul>
              </div>
@@ -144,7 +144,7 @@
                       </div>
                  </section>
 <!--                 experiences-->
-		<section id="experiances">
+		<section id="experiences">
 		 <div class="content">
                          <header class="Subheadings">
                              <h2>Experiences</h2>
