--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
                                  <li><a>Spanish(Learning)</a></li>
                              </ul>
                          </div>
-			</section>
+		    </div>
+		</section>
 <!--                 contact-->
                  <section id="contact">
                      <div class="content">
