--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                          </header>
 			<div>
 			     <h2>KIM HYOWON</h2>
-			<p>" I like cat, sea turtle, PC Game, Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim), TRPG.</p>
-			<p><br> Nowadays I'm learning Spanish and drawing Oil pastel painting. "</p>
+			<p> I like cat, sea turtle, PC Game, Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim), TRPG.</p>
+			<p> Nowadays I'm learning Spanish and drawing Oil pastel painting. </p>
                         </div>
 			<div>
                              <h2>Graduate student in UST-KASI campus</h2>
