--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--             header-->
              <header id="intro"> 
                  <span class="logo"><img src="images/hyo1.jpg" alt="myphoto"></span>
-		 <p>Homepage of Hyowon Kim in astronomy</p>
+		 <h1>Homepage of Hyowon Kim in astronomy</h1>
              </header>
              
 <!--             nav-->
