--- a/index.html
+++ b/index.html
@@ -166,20 +166,19 @@
                              </ul>
 			 </div>
                          <div>
-                             <h2>Computer skills</h2>
-                             <ul>
-                                 <li><a>Languages: IDL, Python</a></li>
-                                 <li><a>WebD: HTML/CSS, JavaScript</a></li>
-                                 <li><a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP)</a></li>
-                             </ul>
-                         </div>
-                         <div>
-                             <h2>Languages</h2>
-                             <ul>
-                                 <li><a>Korean(Native)</a></li>
-                                 <li><a>English(Fluent)</a></li>
-                                 <li><a>Spanish(Learning)</a></li>
-                             </ul>
+                             <h2>Skills</h2>
+				 <h3> Computer languages</h3>
+                             	<ul>
+                                 	<li><a>Languages: IDL, Python</a></li>
+                                 	<li><a>WebD: HTML/CSS, JavaScript</a></li>
+                                 	<li><a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP)</a></li>
+                             	</ul>
+                             	<h3>Languages</h3>
+                             	<ul>
+                                 	<li><a>Korean(Native)</a></li>
+                                 	<li><a>English(Fluent)</a></li>
+                                 	<li><a>Spanish(Learning)</a></li>
+                             	</ul>
                          </div>
 		    </div>
 		</section>
