--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
                              <h2>Grants and Awards</h2>
                              <h2>-Fund</h2>
                              <ul>
-				 <li><a>2022.12.-2023.11. - UST Young scientist+ Fund : fund for research support</a></li>
-                                 <li><a>2022 1st semester - UST Overseas program : fund for Oversea training</a></li>
+				 <li><a>2022.Dec.-2023.Nov. - UST Young scientist+ Fund : fund for research support</a></li>
+                                 <li><a>2022.Apr.-Jun. - UST Overseas program : fund for Oversea training_ Chile</a></li>
                              </ul>
                          </div>
                       </div>
@@ -152,11 +152,12 @@
                              <h2>Experiences</h2>
                              <h2>-Observations</h2>
                              <ul>
-                                 <li><a>MMT, Gemini</a></li>
+                                 <li><a> MMT : 2017B, 2019A&B [Co-author]</a></li>
+				<li><a> Gemini-N&S : 2017B, 2018A [Co-author] </a></li>
                              </ul>
                              <h2>-Simulations</h2>
                              <ul>
-                                 <li><a>Illustris-TNG, N-cluster run</a></li>
+                                 <li><a>Illustris-TNG 300, N-cluster run</a></li>
                              </ul>
                          </div>
                          <div>
