--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 			 </div>
                          <div>
                              <h2>Skills</h2>
-				 <h3> Computer languages</h3>
+				 <h2> -Computer languages</h2>
                              	<ul>
                                  	<li><a>Languages: IDL, Python</a></li>
                                  	<li><a>WebD: HTML/CSS, JavaScript</a></li>
                                  	<li><a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP)</a></li>
                              	</ul>
-                             	<h3>Languages</h3>
+                             	<h2> -Languages</h2>
                              	<ul>
                                  	<li><a>Korean(Native)</a></li>
                                  	<li><a>English(Fluent)</a></li>
