--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                          </header>
 			<div>
 			     <h2>KIM HYOWON</h2>
-			<p> I like cat, sea turtle, PC Game, Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim), TRPG.</p>
-			<p> Nowadays I'm learning Spanish and drawing Oil pastel painting. </p>
-                        </div>
+			<p> I like animals specially cat and sea turtle. I like to play PC Game,TRPG and read and watch the Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim).</p>
+			<p> Nowadays I'm learning Spanish and drawing Oil pastel painting. And my specialty is ruining baking. Only the one of third can survived. </p>			
+			<p> I have experiences about observation and data reduction about spectroscopy. I'm really interested in combining and applying simulation result to observation. </p>
+                	<p> I'm studying the formation and evolution of the galaxy cluster. But I also curious about nature of the Large scale structure of universe, and how galaxies in past to present are connected each other. </p>
+			</div>
 			<div>
                              <h2>Graduate student in UST-KASI campus</h2>
                              <ul>
