--- a/index.html
+++ b/index.html
@@ -307,16 +307,11 @@
             <h2>-Fund</h2>
             <ul>
               <li>
-                <a
-                  >2022 1st semester - UST Overseas program : fund for Oversea
-                  training</a
-                >
+                <a>2022.Dec.-2023.Nov. - UST Young Scientist research fund</a>
               </li>
               <li>
                 <a
-                  >2022.Apr.-Jun. - UST Overseas program : fund for Oversea
-                  training_ Chile</a
-                >
+                  >2022.Apr.-Jun. - UST Overseas program : fund for Overseas training_ Chile</a> 
               </li>
             </ul>
           </div>
