--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
             <h2>References</h2>
             <ul>
               <li>
-                <a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko@kasi.re.kr</a>
+                <a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a>
               </li>
               <li>
                 <a
                   >Co-supervisor : Rory Smith [Universidad Technica Frederico de
-                  Santa Maria, Chile] rorysmith273@gmail.com</a
+                  Santa Maria, Chile] rorysmith273[at]gmail.com</a
                 >
               </li>
             </ul>
@@ -373,9 +373,9 @@
             <h2>E-mail</h2>
             <ul>
               <li>
-                <a href="mailto:hwkim1011@gmail.com">hwkim1011@gmail.com</a>
+                <a href="mailto:hwkim1011@gmail.com">hwkim1011[at]gmail.com</a>
               </li>
-              <li><a href="mailto:kimyo1@kasi.re.kr">kimyo1@kasi.re.kr</a></li>
+              <li><a href="mailto:kimyo1@kasi.re.kr">kimyo1[at]kasi.re.kr</a></li>
             </ul>
           </div>
         </section>
