--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <span>Experiences</span>
             <h2>-Observations</h2>
             <ul>
-              <li><a>MMT, Gemini</a></li>
+              <li><a>MMT</a></li>
               <li><a>Gemini-N&S : 2017B, 2018A [Co-author]</a></li>
             </ul>
             <h2>-Simulations</h2>
@@ -352,10 +352,7 @@
               <li><a>Languages: IDL, Python</a></li>
               <li><a>WebD: HTML/CSS, JavaScript</a></li>
               <li>
-                <a
-                  >Utilities: Topcat, IRAF, specpro, Photometry
-                  programs(SExtractor, SCAMP, SWARP)</a
-                >
+                <a>Utilities: Topcat, IRAF, specpro, Photometry programs(SExtractor, SCAMP, SWARP)</a>
               </li>
             </ul>
             <h2>-Languages</h2>
