--- a/index.html
+++ b/index.html
@@ -109,26 +109,13 @@
             <ul>
               <li><a>Integrate Ph.D. Course of Astropysics since 2017</a></li>
               <li>
-                <a
-                  >Affiliation 1 : Korea, University of Science and
-                  Technology</a
-                ><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a>
+                <a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a>
               </li>
               <li>
-                <a
-                  >Affiliation 2 : Korea Astronomy and Space Science
-                  Institute</a
-                ><a link href="https://www.kasi.re.kr" target="_blank"
-                  >(KASI)</a
-                >
+                <a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a>
               </li>
               <li>
-                <a
-                  link
-                  href="https://orcid.org/0000-0003-4032-8572"
-                  target="_blank"
-                  >https://orcid.org/0000-0003-4032-8572</a
-                >
+                <a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a>
               </li>
               <li>
                 <a link href="http://galev.kasi.re.kr/doku.php" target="_blank"
@@ -246,7 +233,7 @@
                 >
                   "How to quantify the similarity of 2D distributions:
                   Comparison of spatial distribution of Intracluster light and
-                  Dark Matter", Jaewon Yoo et al,2022, Accepted to ApJs</a
+                  Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a
                 >
               </li>
             </ul>
@@ -256,49 +243,32 @@
             <h2>-National</h2>
             <ul>
               <li>
-                <a
-                  >spring 2019) Korea astronomical society meeting, Busan/ Oral
-                  talk</a
-                >
+                <a>Fall 2022) Korea astronomical society meeting, GyungJu/ Oral talk</a>
               </li>
               <li>
-                <a
-                  >Jan 2019) Galaxy formation workshop 2019, Yonsei University/
-                  Oral talk</a
-                >
+                <a>spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a>
               </li>
               <li>
-                <a
-                  >Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul
-                  National University/ Oral talk</a
-                >
+                <a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/Oral talk</a>
               </li>
               <li>
-                <a
-                  >fall 2018) Korea astronomical society meeting, ChungSong/
-                  Poster</a
-                >
+                <a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a>
+              </li>
+              <li>
+                <a>fall 2018) Korea astronomical society meeting, ChungSong/Poster</a>
               </li>
             </ul>
             <h2>-International</h2>
             <ul>
               <li><a>Aug 2022 ) IAUGA, Korea/ Poster</a></li>
               <li>
-                <a
-                  >May 2022 ) IV Workshop on Numerical and Theoretical
-                  Astrophysics, Chile/ Oral talk</a
-                >
+                <a>May 2022 ) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a>
               </li>
               <li>
-                <a
-                  >Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul
-                  National University/ Oral talk</a
-                >
+                <a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a >
               </li>
               <li>
-                <a
-                  >Feb 2022 ) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a
-                >
+                <a>Feb 2022 ) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a>
               </li>
             </ul>
           </div>
@@ -310,8 +280,7 @@
                 <a>2022.Dec.-2023.Nov. - UST Young Scientist research fund</a>
               </li>
               <li>
-                <a
-                  >2022.Apr.-Jun. - UST Overseas program : fund for Overseas training_ Chile</a> 
+                <a>2022.Apr.-Jun. - UST Overseas program : fund for Overseas training_ Chile</a> 
               </li>
             </ul>
           </div>
@@ -335,13 +304,8 @@
             <span>Public Outreach</span>
             <ul>
               <li>
-                <a
-                  link=""
-                  href="http://wiki.kas.org/mw2/index.php/"
-                  target="_blank"
-                >
-                  Korea Astronomy encyclopedia</a
-                ><a> - Copyright check team</a>
+                <a link=""href="http://wiki.kas.org/mw2/index.php/"target="_blank"> Korea Astronomy encyclopedia</a>
+                <a> - Copyright check team</a>
               </li>
             </ul>
           </div>
