--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <h2>-Observations</h2>
             <ul>
               <li><a>MMT</a></li>
-              <li><a>Gemini-N&S : 2017B, 2018A [Co-author]</a></li>
+              <li><a>Gemini-N&S : 2017B, 2018A</a></li>
             </ul>
             <h2>-Simulations</h2>
             <ul>
