--- a/index.html
+++ b/index.html
@@ -134,10 +134,7 @@
                 <a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a>
               </li>
               <li>
-                <a
-                  >Co-supervisor : Rory Smith [Universidad Technica Frederico de
-                  Santa Maria, Chile] rorysmith273[at]gmail.com</a
-                >
+                <a>Co-supervisor : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a>
               </li>
             </ul>
           </div>
@@ -151,16 +148,10 @@
               <li><a>Dynamical state of the galaxy cluster</a></li>
               <li><a>X-ray properties of galaxy cluster</a></li>
               <li>
-                <a
-                  >Effect from Large-scale structure as Environments of the
-                  galaxy cluster</a
-                >
+                <a>Effect from Large-scale structure as Environments of the galaxy cluster</a>
               </li>
               <li>
-                <a
-                  >High-z evolution of BCG and Galaxy cluster (Thus,
-                  proto-cluster and LBGs)</a
-                >
+                <a>High-z evolution of BCG and Galaxy cluster (Thus, proto-cluster and LBGs)</a>
               </li>
               <li><a>Observational cosmology</a></li>
             </ul>
@@ -169,17 +160,10 @@
             <h2>Education</h2>
             <ul>
               <li>
-                <a
-                  >2017-now) University of Science and Technology, Korea,
-                  Astrophysics and space science major, Integrated Ph.D.
-                  course.</a
-                >
+                <a>2017-2024.Fed.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a>
               </li>
               <li>
-                <a
-                  >2010-2015) Kyung pook National University,Department of
-                  Astronomy and Atmospheric science, Bachelor of Astronomy</a
-                >
+                <a>2010-2015) Kyung pook National University,Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a>
               </li>
             </ul>
           </div>
@@ -192,49 +176,26 @@
             <h2>-Paper:1st author</h2>
             <ul>
               <li>
-                <a
-                  link=""
-                  href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e"
-                  target="_blank"
-                >
-                  “Is Abell 2261 a fossil galaxy cluster in a transitional
-                  dynamical state?”, 2022,ApJ,<b> Published</b> / </a
-                ><a
-                  link=""
-                  href="https://arxiv.org/abs/2202.02957"
-                  target="_blank"
-                  >arxiv:2202.02957</a
-                >
+                <a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank"> “Is Abell 2261 a fossil galaxy cluster in a transitional
+                  dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a>
               </li>
               <li>
-                <a
-                  >"Developing new recipes for measuring the dynamical state of
-                  galaxy clusters using simulation", In preperation</a
-                >
+                <a>"Developing new recipes for measuring the dynamical state of
+                  galaxy clusters using simulation", In preperation</a>
               </li>
             </ul>
             <h2>-Paper:Co-author</h2>
             <ul>
               <li>
-                <a
-                  link=""
-                  href="https://arxiv.org/abs/2109.12121"
-                  target="_blank"
-                >
+                <a link=""href="https://arxiv.org/abs/2109.12121" target="_blank">
                   “Intracluster light properties in a fossil cluster at z =
-                  0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a
-                >
+                  0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a>
               </li>
               <li>
-                <a
-                  link=""
-                  href="http://arxiv.org/abs/2205.08161"
-                  target="_blank"
-                >
+                <a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
                   "How to quantify the similarity of 2D distributions:
                   Comparison of spatial distribution of Intracluster light and
-                  Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a
-                >
+                  Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a>
               </li>
             </ul>
           </div>
