--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             other. "
           </p>
           <div class="content-inner">
-            <h2>Graduate student in UST-KASI campus</h2>
+            <h2>Ph.D. candidate in UST-KASI campus</h2>
             <ul>
               <li><a>Integrate Ph.D. Course of Astropysics since 2017</a></li>
               <li>
