--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h2>Education</h2>
             <ul>
               <li>
-                <a>2017-2024.Fed.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a>
+                <a>2017-2024.Feb.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a>
               </li>
               <li>
                 <a>2010-2015) Kyung pook National University,Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a>
