--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
                 <a>"Developing new recipes for measuring the dynamical state of
                   galaxy clusters using simulation", In preperation</a>
               </li>
+              <li>
+                <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preperation</a>
+              </li>
             </ul>
             <h2>-Paper:Co-author</h2>
             <ul>
