--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                   dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a>
               </li>
               <li>
-                <a>"Developing new recipes for measuring the dynamical state of
-                  galaxy clusters using simulation", In preperation</a>
+                <a>"Developing new recipes for measuring the dynamical state of galaxy clusters using simulation", In preperation</a>
               </li>
               <li>
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preperation</a>
@@ -191,14 +190,11 @@
             <ul>
               <li>
                 <a link=""href="https://arxiv.org/abs/2109.12121" target="_blank">
-                  “Intracluster light properties in a fossil cluster at z =
-                  0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a>
+                  “Intracluster light properties in a fossil cluster at z =0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a>
               </li>
               <li>
                 <a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
-                  "How to quantify the similarity of 2D distributions:
-                  Comparison of spatial distribution of Intracluster light and
-                  Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a>
+                  "How to quantify the similarity of 2D distributions:Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a>
               </li>
             </ul>
           </div>
@@ -206,34 +202,19 @@
             <span>Talks</span>
             <h2>-National</h2>
             <ul>
-              <li>
-                <a>Fall 2022) Korea astronomical society meeting, GyungJu/ Oral talk</a>
-              </li>
-              <li>
-                <a>spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a>
-              </li>
-              <li>
-                <a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/Oral talk</a>
-              </li>
-              <li>
-                <a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a>
-              </li>
-              <li>
-                <a>fall 2018) Korea astronomical society meeting, ChungSong/Poster</a>
-              </li>
+              <li><a>Fall 2022) Korea astronomical society meeting, GyungJu/ Oral talk</a></li>
+              <li><a>spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a></li>
+              <li><a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/Oral talk</a></li>
+              <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
+              <li><a>fall 2018) Korea astronomical society meeting, ChungSong/Poster</a></li>
             </ul>
             <h2>-International</h2>
             <ul>
+              <li><a>Fed 2023 ) 2023 Galaxy evolution workshop,  Japan/ Poster+flash talk</a></li>
               <li><a>Aug 2022 ) IAUGA, Korea/ Poster</a></li>
-              <li>
-                <a>May 2022 ) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a>
-              </li>
-              <li>
-                <a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a >
-              </li>
-              <li>
-                <a>Feb 2022 ) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a>
-              </li>
+              <li><a>May 2022 ) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a></li>
+              <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
+              <li><a>Feb 2022 ) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a></li>
             </ul>
           </div>
           <div class="content-inner">
