--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a>
               </li>
               <li>
-                <a>"Developing new recipes for measuring the dynamical state of galaxy clusters using simulation", In preperation</a>
+                <a>"Developing new recipes for measuring the dynamical state of galaxy clusters using simulation",2023, In preperation</a>
               </li>
               <li>
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preperation</a>
