--- a/index.html
+++ b/index.html
@@ -115,12 +115,10 @@
                 <a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a>
               </li>
               <li>
-                <a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a>
+                <u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u>
               </li>
               <li>
-                <a link href="http://galev.kasi.re.kr/doku.php" target="_blank"
-                  >Galaxy Evolution group</a
-                ><a>in KASI</a>
+                <u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a>in KASI</a></u>
               </li>
               <li>
                 <a>Office : Room 204, LWC Hall, KASI, Daejeon, Korea</a>
@@ -176,8 +174,8 @@
             <h2>-Paper:1st author</h2>
             <ul>
               <li>
-                <a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank"> “Is Abell 2261 a fossil galaxy cluster in a transitional
-                  dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a>
+                <u><a link=""href="https://iopscience.iop.org/article/10.3847/1538-4357/ac510e" target="_blank"> “Is Abell 2261 a fossil galaxy cluster in a transitional
+                  dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
               </li>
               <li>
                 <a>"Developing new recipes for measuring the dynamical state of galaxy clusters using simulation",2023, In preperation</a>
@@ -189,13 +187,17 @@
             <h2>-Paper:Co-author</h2>
             <ul>
               <li>
-                <a link=""href="https://arxiv.org/abs/2109.12121" target="_blank">
-                  “Intracluster light properties in a fossil cluster at z =0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a>
+                  "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al,2023,MNRAS,Submitted</a>
               </li>
               <li>
-                <a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
-                  "How to quantify the similarity of 2D distributions:Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a>
+                <u><a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
+                  "How to quantify the similarity of 2D distributions:Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a></u>
               </li>
+              <li>
+                <u><a link=""href="https://arxiv.org/abs/2109.12121" target="_blank">
+                  “Intracluster light properties in a fossil cluster at z =0.47”, Jaewon Yoo et al,2021,MNRAS,Published</a></u>
+              </li>
+
             </ul>
           </div>
           <div class="content-inner">
