--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
             <span>Public Outreach</span>
             <ul>
               <li>
-                <a link=""href="http://wiki.kas.org/mw2/index.php/"target="_blank"> Korea Astronomy encyclopedia</a>
-                <a> - Copyright check team</a>
+                <u><a link=""href="http://wiki.kas.org/mw2/index.php/"target="_blank"> Korea Astronomy encyclopedia</a>
+                <a> - Copyright check team</a></u>
               </li>
             </ul>
           </div>
