--- a/index.html
+++ b/index.html
@@ -267,11 +267,7 @@
               </li>
             </ul>
             <h2>-Languages</h2>
-            <ul>
-              <li><a>Korean(Native)</a></li>
-              <li><a>English(Fluent)</a></li>
-              <li><a>Spanish(Learning)</a></li>
-            </ul>
+            <a>Korean(Native), English(Fluent),Spanish(Learning)</a>
           </div>
         </section>
         <!-- contact section -->
