--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a>in KASI</a></u>
               </li>
               <li>
-                <a>Office : Room 204, LWC Hall, KASI, Daejeon, Korea</a>
+                <a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a>
               </li>
             </ul>
           </div>
