--- a/index.html
+++ b/index.html
@@ -88,81 +88,46 @@
           <h1>ABOUT</h1>
           <h1 class="name">HYOWON KIM</h1>
           <p>
-            " I like animals specially cat and sea turtle. I like to play PC
-            Game,TRPG and read and watch the Science Fiction(Philip Kindred
-            Dick, Andy Weir, ChoYeop Kim).
-            <br class="blank" />
-            Nowadays I'm learning Spanish and drawing Oil pastel painting. And
-            my specialty is ruining baking. Only the one of third can survived.
-            <br class="blank" />
-            I have experiences about observation and data reduction about
-            spectroscopy. I'm really interested in combining and applying
-            simulation result to observation.
-            <br class="blank" />
-            I'm studying the formation and evolution of the galaxy cluster. But
-            I also curious about nature of the Large scale structure of
-            universe, and how galaxies in past to present are connected each
-            other. "
+            " I like animals specially cat and sea turtle. I like to play PC Game,TRPG and read and watch the Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim). <br class="blank" />
+            Nowadays I'm learning Spanish and drawing Oil pastel painting. And my specialty is ruining baking. Only the one of third can survived. <br class="blank" />
+            I have experiences about observation and data reduction about spectroscopy. I'm really interested in combining and applying simulation result to observation.<br class="blank" />
+            I'm studying the formation and evolution of the galaxy cluster. But I also curious about nature of the Large scale structure of universe, and how galaxies in past to present are connected each other. "
           </p>
           <div class="content-inner">
             <h2>Ph.D. candidate in UST-KASI campus</h2>
             <ul>
               <li><a>Integrate Ph.D. Course of Astropysics since 2017</a></li>
-              <li>
-                <a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a>
-              </li>
-              <li>
-                <a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a>
-              </li>
-              <li>
-                <u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u>
-              </li>
-              <li>
-                <u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a>in KASI</a></u>
-              </li>
-              <li>
-                <a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a>
-              </li>
+              <li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>
+              <li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>
+              <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
+              <li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a>in KASI</a></u></li>
+              <li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>
             </ul>
           </div>
           <div class="content-inner">
             <h2>References</h2>
             <ul>
-              <li>
-                <a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a>
-              </li>
-              <li>
-                <a>Co-supervisor : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a>
-              </li>
+              <li><a>Supervisor : Jongwan Ko [KASI,UST, Korea] jwko[at]kasi.re.kr</a></li>
+              <li><a>Co-supervisor : Rory Smith [Universidad Technica Frederico de Santa Maria, Chile] rorysmith273[at]gmail.com</a></li>
             </ul>
           </div>
           <div class="content-inner">
             <h2>Research Interest</h2>
             <ul>
-              <li>
-                <a>Formation and evolution of Brightest cluster galaxy</a>
-              </li>
+              <li><a>Formation and evolution of Brightest cluster galaxy</a></li>
               <li><a>Formation and evolution of the galaxy clustery</a></li>
               <li><a>Dynamical state of the galaxy cluster</a></li>
               <li><a>X-ray properties of galaxy cluster</a></li>
-              <li>
-                <a>Effect from Large-scale structure as Environments of the galaxy cluster</a>
-              </li>
-              <li>
-                <a>High-z evolution of BCG and Galaxy cluster (Thus, proto-cluster and LBGs)</a>
-              </li>
+              <li><a>Effect from Large-scale structure as Environments of the galaxy cluster</a></li>
+              <li><a>High-z evolution of BCG and Galaxy cluster (Thus, proto-cluster and LBGs)</a></li>
               <li><a>Observational cosmology</a></li>
             </ul>
           </div>
           <div class="content-inner">
             <h2>Education</h2>
             <ul>
-              <li>
-                <a>2017-2024.Feb.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a>
-              </li>
-              <li>
-                <a>2010-2015) Kyung pook National University,Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a>
-              </li>
+              <li><a>2017-2024.Feb.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
+              <li><a>2010-2015) Kyung pook National University,Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a></li>
             </ul>
           </div>
         </section>
@@ -205,18 +170,18 @@
             <h2>-National</h2>
             <ul>
               <li><a>Fall 2022) Korea astronomical society meeting, GyungJu/ Oral talk</a></li>
-              <li><a>spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a></li>
+              <li><a>Spring 2019) Korea astronomical society meeting, Busan/ Oral talk</a></li>
               <li><a>Jan 2019) Galaxy formation workshop 2019, Yonsei University/Oral talk</a></li>
               <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
-              <li><a>fall 2018) Korea astronomical society meeting, ChungSong/Poster</a></li>
+              <li><a>Fall 2018) Korea astronomical society meeting, ChungSong/Poster</a></li>
             </ul>
             <h2>-International</h2>
             <ul>
-              <li><a>Fed 2023 ) 2023 Galaxy evolution workshop,  Japan/ Poster+flash talk</a></li>
-              <li><a>Aug 2022 ) IAUGA, Korea/ Poster</a></li>
-              <li><a>May 2022 ) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a></li>
+              <li><a>Fed 2023) 2023 Galaxy evolution workshop,  Japan/ Poster+flash talk</a></li>
+              <li><a>Aug 2022) IAUGA, Korea/ Poster</a></li>
+              <li><a>May 2022) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a></li>
               <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
-              <li><a>Feb 2022 ) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a></li>
+              <li><a>Feb 2022) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a></li>
             </ul>
           </div>
           <div class="content-inner">
