--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <li><a>Affiliation 1 : Korea, University of Science and Technology</a><a link href="https://www.ust.ac.kr" target="_blank">(UST)</a></li>
               <li><a>Affiliation 2 : Korea Astronomy and Space Science Institute</a><a link href="https://www.kasi.re.kr" target="_blank">(KASI)</a></li>
               <li><u><a link href="https://orcid.org/0000-0003-4032-8572"target="_blank">https://orcid.org/0000-0003-4032-8572</a></u></li>
-              <li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a>in KASI</a></u></li>
+              <li><u><a link href="http://galev.kasi.re.kr/doku.php" target="_blank">Galaxy Evolution group</a><a> in KASI</a></u></li>
               <li><a>Office : Room 204, LWC Hall, KASI,34055, Daejeon, Korea</a></li>
             </ul>
           </div>
@@ -177,7 +177,9 @@
             </ul>
             <h2>-International</h2>
             <ul>
-              <li><a>Fed 2023) 2023 Galaxy evolution workshop,  Japan/ Poster+flash talk</a></li>
+              <li><a>Jun 2023) Meeting of the American Astronomical Society, U.S./ Poster+Oral talk</a></li>
+              <li><a>May 2023) Galaxy Groups and Clusters III, Chile/ Oral talk</a></li>
+              <li><a>Fed 2023) 2023 Galaxy evolution workshop, Japan/ Poster+flash talk</a></li>
               <li><a>Aug 2022) IAUGA, Korea/ Poster</a></li>
               <li><a>May 2022) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a></li>
               <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
