--- a/index.html
+++ b/index.html
@@ -143,10 +143,13 @@
                   dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
               </li>
               <li>
-                <a>"Developing new recipes for measuring the dynamical state of galaxy clusters using simulation",2023, In preperation</a>
+                <a>"Developing observational new recipes for measuring the dynamical state of galaxy clusters using simulation",2023, In preparation </a>
               </li>
               <li>
-                <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preperation</a>
+                <a>TBD</a>
+              </li>
+              <li>
+                <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
               </li>
             </ul>
             <h2>-Paper:Co-author</h2>
@@ -177,7 +180,7 @@
             </ul>
             <h2>-International</h2>
             <ul>
-              <li><a>Jun 2023) Meeting of the American Astronomical Society, U.S./ Poster+Oral talk</a></li>
+              <li><a>Jun 2023) Meeting of the American Astronomical Society, U.S./ Poster</a></li>
               <li><a>May 2023) Galaxy Groups and Clusters III, Chile/ Oral talk</a></li>
               <li><a>Fed 2023) 2023 Galaxy evolution workshop, Japan/ Poster+flash talk</a></li>
               <li><a>Aug 2022) IAUGA, Korea/ Poster</a></li>
