--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <a>"Developing observational new recipes for measuring the dynamical state of galaxy clusters using simulation",2023, In preparation </a>
               </li>
               <li>
-                <a>TBD</a>
+                <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", TBD </a>
               </li>
               <li>
                 <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
