--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
               <li><a>Fed 2023) 2023 Galaxy evolution workshop, Japan/ Poster+flash talk</a></li>
               <li><a>Aug 2022) IAUGA, Korea/ Poster</a></li>
               <li><a>May 2022) IV Workshop on Numerical and Theoretical Astrophysics, Chile/ Oral talk</a></li>
-              <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
               <li><a>Feb 2022) 2021 Galaxy evolution workshop, Zoom/ Oral talk</a></li>
+              <li><a>Jan 2019) Infrared Medium-Deep Survey Workshop 2019, Seoul National University/ Oral talk</a></li>
             </ul>
           </div>
 
@@ -195,7 +195,7 @@
         <section class="content experiences" id="experiences">
           <h1>Experiences</h1>
           <div class="content-inner">
-            <span>Grants and Awards</span>
+            <span>Grants</span>
             <h2>-Fund</h2>
             <ul>
               <li>
