--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h2>Education</h2>
             <ul>
               <li><a>2017-2024.Feb.planned) University of Science and Technology, Korea, Astrophysics and space science major, Integrated Ph.D. course.</a></li>
-              <li><a>2010-2015) Kyung pook National University,Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a></li>
+              <li><a>2010-2015) Kyung Pook National University, Department of Astronomy and Atmospheric science, Bachelor of Astronomy</a></li>
             </ul>
           </div>
         </section>
@@ -126,11 +126,9 @@
             <h2>Research Interest</h2>
             <ul>
               <li><a>Formation and evolution of Brightest cluster galaxy</a></li>
-              <li><a>Formation and evolution of the galaxy clustery</a></li>
-              <li><a>Dynamical state of the galaxy cluster</a></li>
-              <li><a>X-ray properties of galaxy cluster</a></li>
+              <li><a>Formation and evolution of the galaxy cluster</a></li>
               <li><a>Effect from Large-scale structure as Environments of the galaxy cluster</a></li>
-              <li><a>High-z evolution of BCG and Galaxy cluster (Thus, proto-cluster and LBGs)</a></li>
+              <li><a>High-z evolution of BCG and Galaxy cluster (proto-cluster and LBGs)</a></li>
               <li><a>Observational cosmology</a></li>
             </ul>
           </div>
