--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   dynamical state?”, 2022,ApJ,<b> Published</b> / </a><a link="" href="https://arxiv.org/abs/2202.02957" target="_blank" >arxiv:2202.02957</a></u>
               </li>
               <li>
-                <a>"Developing observational new recipes for measuring the dynamical state of galaxy clusters using simulation",2023, In preparation </a>
+                <a>"New observational recipes for measuring dynamical state of galaxy clusters",2023, submitted in ApJ </a>
               </li>
               <li>
                 <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", TBD </a>
