--- a/index.html
+++ b/index.html
@@ -86,12 +86,14 @@
         <section class="content about" id="about">
           <span>Homepage of Hyowon Kim in astronomy</span>
           <h1>ABOUT</h1>
-          <h1 class="name">HYOWON KIM</h1>
+          <h1 class="name">HYOWON KIM [Hyo-Won-Kim]</h1>
           <p>
-            " I like animals specially cat and sea turtle. I like to play PC Game,TRPG and read and watch the Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim). <br class="blank" />
-            Nowadays I'm learning Spanish and drawing Oil pastel painting. And my specialty is ruining baking. Only the one of third can survived. <br class="blank" />
-            I have experiences about observation and data reduction about spectroscopy. I'm really interested in combining and applying simulation result to observation.<br class="blank" />
-            I'm studying the formation and evolution of the galaxy cluster. But I also curious about nature of the Large scale structure of universe, and how galaxies in past to present are connected each other. "
+            " I like animals, especially cats and sea turtles. I like to play PC Game, TRPG and read and watch Science Fiction(Philip Kindred Dick, Andy Weir, ChoYeop Kim). <br class="blank" />
+            Nowadays, I'm learning Spanish and drawing Oil pastel paintings. And my specialty is ruining baking. Only one of the third can survive. <br class="blank" />
+            <br class="blank" />
+            I have experience with observation and data reduction in spectroscopy. I'm really interested in combining and applying simulation results to observation.<br class="blank" />
+            I'm studying the formation and evolution of the galaxy cluster. But I am also curious about the nature of the Large scale structure of the universe. <br class="blank" />
+            and how galaxies from past to present are connected to each other. "
           </p>
           <div class="content-inner">
             <h2>Ph.D. candidate in UST-KASI campus</h2>
@@ -134,6 +136,7 @@
           </div>
           <div class="content-inner">
             <span>Publications</span>
+            <p>(If you click the title, then the paper page will be connected.)</p>
             <h2>-Paper:1st author</h2>
             <ul>
               <li>
@@ -144,20 +147,20 @@
                 <a>"New observational recipes for measuring dynamical state of galaxy clusters",2023, submitted in ApJ </a>
               </li>
               <li>
-                <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", TBD </a>
+                <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
               </li>
               <li>
-                <a>"The origin of a fossil cluster by testing the M* galaxy merger hypothesis", In preparation </a>
+                <a>"Mapping cluster dynamical state for the nearby universe with S_PLUS", TBD </a>
               </li>
             </ul>
             <h2>-Paper:Co-author</h2>
             <ul>
               <li>
-                  "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al,2023,MNRAS,Submitted</a>
+                  "BCG alignment with the Locations of Cluster Members and the Large Scale Structure out to 10 R_200", Smith Rory et al, 2023, MNRAS, Submitted</a>
               </li>
               <li>
                 <u><a link="" href="http://arxiv.org/abs/2205.08161" target="_blank">
-                  "How to quantify the similarity of 2D distributions:Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al,2022,ApJs,Published</a></u>
+                  "How to quantify the similarity of 2D distributions:Comparison of spatial distribution of Intracluster light and Dark Matter", Jaewon Yoo et al, 2022, ApJs, Published</a></u>
               </li>
               <li>
                 <u><a link=""href="https://arxiv.org/abs/2109.12121" target="_blank">
